# StudyHaskell

./: StudyHaskell.cabal  memo.md
app/: Main.hs
src/Book/BasicOfFp/Chap01/: Coord.hs
src/Book/HajimeteHaskell/Chap01/: Basic.hs
src/Book/HajimeteHaskell/Chap02/: FizzBuzz.hs
src/Book/HajimeteHaskell/Chap03/: Employee.hs  Greeting.hs  IntToArray.hs  TreeDict.hs
src/Book/HajimeteHaskell/Chap05/: Hajimete05.hs
src/Book/HajimeteHaskell/Chap07/: ParseDateTime.hs
src/Book/HajimeteHaskell/Chap09/Data/Hjq/: Parser.hs
src/Book/SugoiHaskell/Chap06/: Geometry.hs  PhoneBook.hs
src/Book/SugoiHaskell/Chap07/: Tree.hs
src/Book/SugoiHaskell/Chap10/: Heathrow.hs
src/Book/SugoiHaskell/Chap11/: Sugoi11.hs
src/Book/SugoiHaskell/Chap12/: Tree.hs
src/HajimeteHaskell/Chap01/: Basic.hs
src/HajimeteHaskell/Chap02/: FizzBuzz.hs
src/HajimeteHaskell/Chap03/: Employee.hs  Greeting.hs  TreeDict.hs
src/HajimeteHaskell/Chap07/: ParseDateTime.hs
src/HajimeteHaskell/Chap09/Data/Hjq/: Parser.hs
src/SugoiHaskell/Chap06/: Geometry.hs  PhoneBook.hs
src/SugoiHaskell/Chap07/: Tree.hs
src/SugoiHaskell/Chap10/: Heathrow.hs
src/Try/: TFold.hs
test/: Spec.hs
test/Book/BasicOfFp/Chap01/: CoordSpec.hs
test/Book/HajimeteHaskell/Chap02/: HajiChap02Spec.hs
test/Book/HajimeteHaskell/Chap03/: EmployeeSpec.hs  GreetingSpec.hs  IntToArraySpec.hs
test/Book/HajimeteHaskell/Chap05/: Hajimete05Spec.hs
test/Book/HajimeteHaskell/Chap07/: ParseDateTimeSpec.hs
test/Book/HajimeteHaskell/Chap09/Data/Hjq/: ParserSpec.hs
test/Book/SugoiHaskell/Chap06/: GeometrySpec.hs  PhoneBookSpec.hs
test/Book/SugoiHaskell/Chap07/: TreeSpec.hs
test/Book/SugoiHaskell/Chap10/: HeathrowSpec.hs
test/HajimeteHaskell/Chap02/: HajiChap02Spec.hs
test/HajimeteHaskell/Chap03/: GreetingSpec.hs
test/HajimeteHaskell/Chap07/: ParseDateTimeSpec.hs
test/HajimeteHaskell/Chap09/Data/Hjq/: ParserSpec.hs
test/SugoiHaskell/Chap06/: GeometrySpec.hs  PhoneBookSpec.hs
test/SugoiHaskell/Chap07/: TreeSpec.hs
test/SugoiHaskell/Chap10/: HeathrowSpec.hs
test/Try/: TFoldSpec.hs
