name:                StudyHaskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/StudyHaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       , HajimeteHaskell.Chap01.Basic
                       , HajimeteHaskell.Chap02.FizzBuzz
                       , HajimeteHaskell.Chap03.TreeDict
                       , HajimeteHaskell.Chap03.Employee
                       , SugoiHaskell.Chap06.PhoneBook
                       , SugoiHaskell.Chap06.Geometry
                       , SugoiHaskell.Chap10.Heathrow
                       , Try.TFold
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable StudyHaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , StudyHaskell
  default-language:    Haskell2010

test-suite StudyHaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Try.TFoldSpec
                     , HajimeteHaskell.Chap02.HajiChap02Spec
                     , SugoiHaskell.Chap06.PhoneBookSpec
                     , SugoiHaskell.Chap06.GeometrySpec
                     , SugoiHaskell.Chap10.HeathrowSpec
  build-depends:       base
                     , HUnit
                     , StudyHaskell
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/StudyHaskell
