name:                StudyHaskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/StudyHaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       , Book.HajimeteHaskell.Chap01.Basic
                       , Book.HajimeteHaskell.Chap02.FizzBuzz
                       , Book.HajimeteHaskell.Chap03.TreeDict
                       , Book.HajimeteHaskell.Chap03.Employee
                       , Book.HajimeteHaskell.Chap03.Greeting
                       , Book.HajimeteHaskell.Chap07.ParseDateTime
                       , Book.HajimeteHaskell.Chap09.Data.Hjq.Parser
                       , Book.SugoiHaskell.Chap06.PhoneBook
                       , Book.SugoiHaskell.Chap06.Geometry
                       , Book.SugoiHaskell.Chap07.Tree
                       , Book.SugoiHaskell.Chap10.Heathrow
                       , Try.TFold
  build-depends:       base >= 4.7 && < 5
                       , attoparsec
                       , split
                       , text
  default-language:    Haskell2010

executable StudyHaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , StudyHaskell
  default-language:    Haskell2010

test-suite StudyHaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Try.TFoldSpec
                     , Book.HajimeteHaskell.Chap02.HajiChap02Spec
                     , Book.HajimeteHaskell.Chap03.GreetingSpec
                     , Book.HajimeteHaskell.Chap07.ParseDateTimeSpec
                     , Book.HajimeteHaskell.Chap09.Data.Hjq.ParserSpec
                     , Book.SugoiHaskell.Chap06.PhoneBookSpec
                     , Book.SugoiHaskell.Chap06.GeometrySpec
                     , Book.SugoiHaskell.Chap07.TreeSpec
                     , Book.SugoiHaskell.Chap10.HeathrowSpec
  build-depends:       base
                     , HUnit
                     , StudyHaskell
                     , text
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/StudyHaskell
